--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,13 +1,19 @@
-$font-stack:    Roboto, sans-serif;
-$primary-color: #FF3333;
+//$font-stack:    Roboto, sans-serif;
+@import "./fonts.scss";
 
+$primary-color: #63ff33;
 
 body {
-  font: 100% $font-stack;
+  font: 24px RobotoRegular;
+  //font: 100% $font-stack;
   color: $primary-color;
 }
 
-
+h1 {
+  font: 24px RobotoBlack;
+  //font: 100% $font-stack;
+  color: #FF0000; 
+}
 
 
 
