--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,1 +1,1 @@
-body{font:100% Helvetica,sans-serif;color:#FFFF33}
+@font-face{font-family:'RobotoRegular';src:url("../fonts/Roboto/Roboto-Regular.ttf");font-weight:normal;font-style:normal}@font-face{font-family:'RobotoBlack';src:url("../fonts/Roboto/Roboto-Black.ttf");font-weight:normal;font-style:normal}body{font:24px RobotoRegular;color:#63ff33}h1{font:24px RobotoBlack;color:#FF0000}
