--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,1 +1,1 @@
-header{font:24px RobotoBlack;background:#F3C329;color:#000}.header__logo{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center}
+header{font:24px RobotoBlack;background:#F3C329;color:#000}.header__logo{display:flex;align-items:center}.header__menu{color:#000;display:flex;flex-direction:row;align-items:center}.header__menu a{font:18px RobotoRegular;color:#000}.header__telephone{font:18px RobotoBold;display:flex;align-items:center;flex-direction:row}
