--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -8,6 +8,13 @@
 
 
 @font-face {
+    font-family: 'RobotoBold';
+    src : url("../fonts/Roboto/Roboto-Bold.ttf");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
     font-family: 'RobotoBlack';
     src : url("../fonts/Roboto/Roboto-Black.ttf");
     font-weight: normal;
